@@ -1,3 +1,7 @@
+2010-07-22  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-misc.el: Disable highlight-symbol-mode in console.
+
 2010-07-19  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el: Enable pc-selection-mode in emacs-21.
